[package]
name = "pulsebeam-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
chrono = "0.4.38"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
js-sys = "0.3.72"
jwt-compact = { version = "0.8.0", features = ["ciborium", "ed25519-dalek"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2"
wasm-bindgen = "0.2.100"

[profile.release]
lto = true
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
clap = { version = "4.5.22", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
